plugins {
    id 'java'
    id 'application'
    id 'edu.sc.seis.launch4j' version '2.4.4'
    id 'org.beryx.jlink' version '2.1.8'
    id "org.javamodularity.moduleplugin" version "1.1.1"
    id 'org.openjfx.javafxplugin' version '0.0.5'
}

group 'level4project'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

/*
def currentOS = org.gradle.internal.os.OperatingSystem.current()
def platform
if (currentOS.isWindows()) {
    platform = 'win'
} else if (currentOS.isLinux()) {
    platform = 'linux'
} else if (currentOS.isMacOsX()) {
    platform = 'mac'
}*/

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile "org.testfx:testfx-core:4.0.14-alpha"
    testCompile "org.testfx:testfx-junit:4.0.15-alpha"
    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
    compile 'org.json:json:20171018'
    compile group: 'net.sourceforge.jeval', name: 'jeval', version: '0.9.4'
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
    //compile group: 'org.openjfx', name: 'javafx', version: '12-ea+4', ext: 'pom'
   // compile "org.openjfx:javafx-base:11:${platform}"
   // compile "org.openjfx:javafx-graphics:11:${platform}"
   // compile "org.openjfx:javafx-controls:11:${platform}"
   // compile "org.openjfx:javafx-fxml:11:${platform}"
}

//compileJava {
//    doFirst {
//        options.compilerArgs = [
//                '--module-path', classpath.asPath,
//                '--add-modules', 'javafx.controls,javafx.fxml'
//        ]
//    }
//}


javafx {
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
}

mainClassName = 'main.ui.main/main.ui.main.Mainfx'

jar {
    manifest {
        attributes (
                'Main-Class': 'main.ui.main.Mainfx'
        )
    }
    //from {
    //    configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    //}
}

launch4j {
    mainClassName = 'main.ui.main.Mainfx'
    bundledJre64Bit = true
    //bundledJrePath = "usr/lib/jvm/java-10-oracle/bin/java"
    bundledJrePath = "jre"
}

jlink {
    mergedModule {
        requires 'java.naming'
        requires 'java.xml'
    }
    mainClassName = 'main.ui.main.Mainfx'
    //moduleName = 'logicsim'
    options = ['--no-header-files', '--no-man-pages']
    launcher{
        name = 'hello'
        jvmArgs = ['-Dlog4j.configurationFile=./log4j2.xml']
    }
    javaHome = 'C:\\Users\\Bob\\Downloads\\openjdk-11.0.1_windows-x64_bin\\jdk-11'
}

/*def java_home = 'C:\\Users\\Bob\\Downloads\\openjdk-11.0.1_windows-x64_bin\\jdk-11'
def fx_jmods = 'C:\\Users\\Bob\\Downloads\\openjfx-11.0.1_windows-x64_bin-jmods\\javafx-jmods-11.0.1'

task jlink(type: Exec) {
    dependsOn 'clean'
    dependsOn 'jar'

    workingDir 'build'

    if (java_home == null) {
        throw new RuntimeException("java_home is not defined.")
    }
    if (fx_jmods == null) {
        throw new RuntimeException("fx_jmods is not defined.")
    }
    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${fx_jmods}",
            '--add-modules', "${moduleName}", '--output', "${moduleName}", '--strip-debug',
            '--compress', '2', '--no-header-files', '--no-man-pages'
}*/